<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="45sp"
        android:paddingTop="10sp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/title_layout"
        android:paddingTop="15dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_text"
            android:text="@string/title_text"
            tools:ignore="MissingConstraints"
            android:textSize="25sp"
            android:paddingLeft="15dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_edit"
            android:hint="@string/title_hint"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        android:id="@+id/author_layout"
        android:paddingTop="15dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:text="@string/author_text"
            tools:ignore="MissingConstraints"
            android:textSize="25sp"
            android:paddingLeft="15dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author_edit"
            android:hint="@string/author_hint"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/author_layout"
        android:id="@+id/publisher_layout"
        android:paddingTop="15dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/publisher_text"
            android:text="@string/publisher_text"
            tools:ignore="MissingConstraints"
            android:textSize="25sp"
            android:paddingLeft="15dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/publisher_edit"
            android:hint="@string/publisher_hint"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/publisher_layout"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:id="@+id/find_button"
            android:text="@string/find_button"
            app:layout_constraintTop_toBottomOf="@id/publisher_layout"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>